# multi-agent-code-reviewer

./: .env.example  .gitignore  CHANGELOG.md  README.md  doc.md  pyproject.toml  requirements.txt
code_reviewer/: config.py  main.py  memory.py  observability.py  schemas.py  tools.py
code_reviewer/stages/: comprehend.py  consolidate.py  detect.py  specialists.py
tests/: conftest.py  test_memory.py  test_render.py  test_stages.py  test_tools.py
